# auto-atr

./: .dockerignore  .env  .gitignore  .sample_env  Dockerfile  README.md  docker-compose.yml  example.env  main.py  test.py
.devcontainer/: devcontainer.json
app/: ma.py  main.py  pyproject.toml
data/: SG09p1je.csv  SG09p1li.csv  SG09p2je.csv  SG09p2li.csv  SG09p3je.csv  SG09p3li.csv  SG10p2je.csv  SG10p3je.csv  SG10p3li.csv  SG10p4li.csv  SG10p5je.csv  SG17p1je.csv  SG17p3je.csv  SG17p4je.csv  SG17p5je.csv  SG18p3je.csv  SG18p4je.csv  SG18p4je.csv.csv  pre4_part3_s1.csv  pre4_part4_s1.csv
src/: data.py  lesson.py  ma.py  main.py  pyproject.toml  score.py  task.py  transition.py  util.py
src/task/: listen.py  sort.py  task.py  translation.py  util.py
