[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "4.8.2"
pandas = "1.5.3"
jupyter = "1.0.0"
requests = "2.28.2"
BeautifulSoup4 = "4.11.2"
argparse = "1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"